cabal-version:       2.2

name:                tui-clock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tui-clock#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable tui-clock
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       brick,
                       time,
                       vty >= 5.38,
                       vty-crossplatform,
                       vty-unix,
                       process,
                       microlens
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
